corrected overflow

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -66,3 +66,7 @@
 pre.highlight {
     margin: 0;
 }
+
+.sidebar {
+	overflow: visible !important;
+}
